--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Typography & Interaction 2: Spring 2022</title>
+<title>Typography & Interaction 2: Section B, Spring 2022</title>
 <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon.ico">
 <link rel="stylesheet" href="style.css">
 </head>
