--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <title>Typography & Interaction 2: Section B, Spring 2022</title>
-<link rel="icon" type="image/png" sizes="32x32" href="favicon.ico">
+<link rel="icon" type="image/png" sizes="32x32" href="assets/favicon.ico">
 <link rel="stylesheet" href="style.css">
 </head>
 
