--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 
 <head>
   <title>Typography & Interaction 2: Section B, Spring 2022</title>
-  <link rel="icon" type="image/png" sizes="32x32" href="https://tuanquocpham.github.io/a-round-net/assets/favicon.ico">
+  <!-- <link rel="icon" type="image/png" sizes="32x32" href="https://tuanquocpham.github.io/a-round-net/assets/favicon.ico"> -->
+  <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon.ico">
   <link rel="stylesheet" href="style.css">
 </head>
 
@@ -473,7 +474,7 @@
         <button class="accordion"><li>Daisy Chain</li></button>
         <div class="panel">
           <p>
-            Now that we have our sites up and running via Github Desktop/Pages, we're going to create a chain that links together everyone's websites. 
+            Now that we have our sites up and running via Github Desktop/Pages, we're going to create a chain that links together everyone's websites.
             <br><br>
             FAVICON:<br>
             - Download this <a href="" target="blank">favicon template</a>.<br>
