--- a/index.html
+++ b/index.html
@@ -308,15 +308,6 @@
       <div class="panel">
         <ol>
 
-        <button class="accordion"><li>Page</li></button>
-        <div class="panel">
-          <p>
-            Using the page from the Daisy Chain exercise, you will create a personal site to house links to your projects, exercises, and homework for later reference and grading.
-            <br><br>
-            Remember to keep it updated as you work.
-          </p>
-        </div>
-
         <button class="accordion"><li>Path</li></button>
         <div class="panel">
           <p>
@@ -461,6 +452,16 @@
           </p>
         </div>
 
+        <button class="accordion"><li>Page</li></button>
+        <div class="panel">
+          <p>
+            Download the template <a href="assets/downloads/Ex_DaisyChain.zip" download>here</a>
+            Using the page from the Daisy Chain exercise, you will create a personal site to house links to your projects, exercises, and homework for later reference and grading.
+            <br><br>
+            Remember to keep it updated as you work.
+          </p>
+        </div>
+
         </ol>
       </div>
 
@@ -484,8 +485,8 @@
             <br><br>
             LINK TO CLASSMATE:<br>
             - Open your index.html file in Atom.<br>
-            - On line XX, replace the text YOUR NAME HERE with your name.<br>
-            - On line XX, replace the text YOUR NAME HERE with your name.<br>
+            - On line XX, replace the text MY NAME HERE with your name.<br>
+            - On line XX, replace the text MY NAME HERE with your name.<br>
             - On line XX, add the following:<br>
             - Replace the text LINK GOES HERE with the url of your classmate's site.<br>
             - Replace the text CLASSMATE NAME GOES HERE with your classmate's name.
