--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <title>Typography & Interaction 2: Section B, Spring 2022</title>
   <!-- <link rel="icon" type="image/png" sizes="32x32" href="https://tuanquocpham.github.io/a-round-net/assets/favicon.ico"> -->
-  <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon.ico">
+  <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicon.ico">
   <link rel="stylesheet" href="style.css">
 </head>
 
@@ -213,9 +213,9 @@
       <button class="accordion"><li>Spring Break, Mar 14–20</li></button>
       <div class="panel">
         <p>
-          <img src="assets/springbreak.jpg">
+          No class this week. Try to make some time for yourself.
           <br><br>
-          No class this week. Try to take some time for yourself.
+          <img src="assets/images/springbreak.jpg">
         </p>
       </div>
 
@@ -455,8 +455,13 @@
         <button class="accordion"><li>Page</li></button>
         <div class="panel">
           <p>
-            Download the template <a href="assets/downloads/Ex_DaisyChain.zip" download>here</a>
             Using the page from the Daisy Chain exercise, you will create a personal site to house links to your projects, exercises, and homework for later reference and grading.
+            <br><br>
+            1. Download and unzip the <a href="assets/downloads/Ex_DaisyChain.zip" download>Page Template</a>.<br>
+            2. Replace the current index.html file in your Daisy Chain exercise with this new one.<br>
+            <img src="assets/images/Tutorial_Page1.png"><br>
+            3. Open the new index.html file and replace all instances of MY NAME HERE with your name.
+            <img src="assets/images/Tutorial_Page2.png">
             <br><br>
             Remember to keep it updated as you work.
           </p>
@@ -475,21 +480,25 @@
         <button class="accordion"><li>Daisy Chain</li></button>
         <div class="panel">
           <p>
-            Now that we have our sites up and running via Github Desktop/Pages, we're going to create a chain that links together everyone's websites.
+            Now that we have our sites up and running via Github Desktop/Pages, we're going to link together everyone's page.
             <br><br>
             FAVICON:<br>
-            - Download this <a href="" target="blank">favicon template</a>.<br>
-            - Spend 5 minutes drawing a flower using the favicon template.<br>
-            - Once you are done, export your drawing as a png into your assets folder. Keep the file name as "favicon.png"<br>
-            - Change the file extension from png to ico to turn the image into a favicon.
+            1. Inside your Asset folder, open the <strong>favicon.psd</strong> template.<br>
+            2. Spend 5 minutes drawing a flower using the favicon template.<br>
+            3. Once you are done, export your drawing as a png into your assets folder. Keep the file name as <strong>favicon.png</strong><br>
+            4. Change the file extension from <strong>png to ico</strong> to turn the image into a favicon.
             <br><br>
             LINK TO CLASSMATE:<br>
-            - Open your index.html file in Atom.<br>
-            - On line XX, replace the text MY NAME HERE with your name.<br>
-            - On line XX, replace the text MY NAME HERE with your name.<br>
-            - On line XX, add the following:<br>
-            - Replace the text LINK GOES HERE with the url of your classmate's site.<br>
-            - Replace the text CLASSMATE NAME GOES HERE with your classmate's name.
+            5. Open your <strong>index.html</strong> file in Atom.<br>
+            6. On lines 5, 10, and 12 replace the text <strong>MY NAME HERE</strong> with your name.<br>
+            7. On line 12, replace the text <strong>LINK GOES HERE</strong> with the url of your classmate's site.<br>
+            8. On line 12, replace the text <strong>CLASSMATE NAME GOES HERE</strong> with your classmate's name.
+            <br><br>
+            PUSH CHANGES:<br>
+            9. Return to the <strong>Github Desktop</strong> app.<br>
+            10. Name your update in the <strong>Summary</strong> field.<br>
+            11. Click the <strong>Commit to main</strong> button.<br>
+            12.
           </p>
         </div>
 
@@ -534,11 +543,11 @@
         <p>
           All homework assignments are optional but highly suggested as they provide additional practice for what we learned in class that day.
           <br><br>
-          - <a href="" target="blank">HTML Homework</a><br>
-          - <a href="" target="blank">CSS Homework</a><br>
-          - <a href="" target="blank">CSS Positioning Homework</a><br>
-          - <a href="" target="blank">Flexbox Homework</a><br>
-          - <a href="" target="blank">JS Homework</a><br>
+          - <a href="" download>HTML Homework</a><br>
+          - <a href="" download>CSS Homework</a><br>
+          - <a href="" download>CSS Positioning Homework</a><br>
+          - <a href="" download>Flexbox Homework</a><br>
+          - <a href="" download>JS Homework</a><br>
         </p>
       </div>
 
