--- a/index.html
+++ b/index.html
@@ -483,22 +483,28 @@
             Now that we have our sites up and running via Github Desktop/Pages, we're going to link together everyone's page.
             <br><br>
             FAVICON:<br>
-            1. Inside your Asset folder, open the <strong>favicon.psd</strong> template.<br>
+            1. Inside your asset folder, open the <strong>favicon.psd</strong> template.<br>
+            <img src="assets/images/Tutorial_DaisyChain1.png"><br>
             2. Spend 5 minutes drawing a flower using the favicon template.<br>
+            <img src="assets/images/Tutorial_DaisyChain2.png"><br>
             3. Once you are done, export your drawing as a png into your assets folder. Keep the file name as <strong>favicon.png</strong><br>
-            4. Change the file extension from <strong>png to ico</strong> to turn the image into a favicon.
+            4. Change the file extension from <strong>png to ico</strong> to turn the image into a favicon.<br>
+            <img src="assets/images/Tutorial_DaisyChain3.png">
             <br><br>
             LINK TO CLASSMATE:<br>
             5. Open your <strong>index.html</strong> file in Atom.<br>
+            <img src="assets/images/Tutorial_DaisyChain4.png"><br>
             6. On lines 5, 10, and 12 replace the text <strong>MY NAME HERE</strong> with your name.<br>
             7. On line 12, replace the text <strong>LINK GOES HERE</strong> with the url of your classmate's site.<br>
             8. On line 12, replace the text <strong>CLASSMATE NAME GOES HERE</strong> with your classmate's name.
             <br><br>
-            PUSH CHANGES:<br>
+            GITHUB:<br>
             9. Return to the <strong>Github Desktop</strong> app.<br>
+            <img src="assets/images/Tutorial_DaisyChain5.png"><br>
             10. Name your update in the <strong>Summary</strong> field.<br>
             11. Click the <strong>Commit to main</strong> button.<br>
-            12.
+            12. Click the <strong>Push origin</strong> button.<br>
+            <img src="assets/images/Tutorial_DaisyChain6.png"><br>
           </p>
         </div>
 
