--- a/index.html
+++ b/index.html
@@ -457,12 +457,6 @@
           <p>
             Using the page from the Daisy Chain exercise, you will create a personal site to house links to your projects, exercises, and homework for later reference and grading.
             <br><br>
-            1. Download and unzip the <a href="assets/downloads/Ex_DaisyChain.zip" download>Page Template</a>.<br>
-            2. Replace the current index.html file in your Daisy Chain exercise with this new one.<br>
-            <img src="assets/images/Tutorial_Page1.png"><br>
-            3. Open the new index.html file and replace all instances of MY NAME HERE with your name.
-            <img src="assets/images/Tutorial_Page2.png">
-            <br><br>
             Remember to keep it updated as you work.
           </p>
         </div>
@@ -476,6 +470,20 @@
       <button class="accordion"><li>Exercises</li></button>
       <div class="panel">
         <ol>
+
+          <button class="accordion"><li>Git Set Up</li></button>
+          <div class="panel">
+            <p>
+              DOWNLOADS:<br>
+              1. Create a  <a href="https://github.com/" target="blank">Github account</a>. Make sure you verify your e-mail.<br>
+              2. Download the <a href="https://atom.io/" target="blank">Atom Text Editor</a>.<br>
+              4. Download the <a href="assets/downloads/YourNameHere-ClassSite.zip" download>Page Template</a>.<br>
+              3. Download the <a href="https://desktop.github.com/" target="blank">Github Desktop app</a>.
+              <br><br>
+              SET UP:<br>
+              X. Add the URL of your page to this <a href="" target="blank">list</a>.
+            </p>
+          </div>
 
         <button class="accordion"><li>Daisy Chain</li></button>
         <div class="panel">
@@ -708,11 +716,13 @@
       <button class="accordion"><li>Materials & Supplies</li></button>
       <div class="panel">
         <p>
-          The following tools will be used in this course:
+          The following tools and software will be used in this course:
           <br><br>
-          ① <a href="" target="blank">Atom Text Editor</a><br>
-          ② <a href="" target="blank">Github Desktop</a><br>
-          ② <a href="" target="blank">Are.na</a>
+          ① Laptop / Computer<br>
+          ② <a href="https://atom.io/" target="blank">Atom Text Editor</a><br>
+          ③ <a href="https://github.com/" target="blank">Github</a><br>
+          ④ <a href="https://desktop.github.com/" target="blank">Github Desktop</a><br>
+          ⑤ <a href="https://www.are.na/" target="blank">Are.na</a>
         </p>
       </div>
 
