--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
           <br><br>
           <a href="https://docs.google.com/document/d/1n92t3SKq-7l-Pq_34xYSbqB7fsXFpXmTqFnQ6Asoq2M/edit?usp=sharing" target="blank">WIP Critiques</a>
           <br><br>
-          For next class:<br>
+          FOR NEXT CLASS:<br>
           TBD
         </p>
       </div>
@@ -242,8 +242,9 @@
             <br><br>
             - break -
             <br><br>
-            <a href="https://docs.google.com/document/d/1n92t3SKq-7l-Pq_34xYSbqB7fsXFpXmTqFnQ6Asoq2M/edit?usp=sharing" target="blank">WIP Critiques</a><br><br>
-            For next class:<br>
+            <a href="https://docs.google.com/document/d/1n92t3SKq-7l-Pq_34xYSbqB7fsXFpXmTqFnQ6Asoq2M/edit?usp=sharing" target="blank">WIP Critiques</a>
+            <br><br>
+            FOR NEXT CLASS:<br>
             Content Critique
           </p>
       </div>
@@ -259,37 +260,78 @@
           <br><br>
           Exercise: TBD
           <br><br>
-          For next class:<br>
-          TBD
+          FOR NEXT CLASS:<br>
+          Read <a href="https://frankchimero.com/blog/2015/the-webs-grain/" target="blank">The Web's Grain</a>, Frank Chimero<br>
+          <a href="https://docs.google.com/document/d/1adxnPSIr56yG0y0pchh-Cay99rUApITgazFabLclYH4/edit?usp=sharing" target="blank">Reading Reflections</a><br>
         </p>
       </div>
 
       <button class="accordion"><li>Class 11, Apr 13</li></button>
       <div class="panel">
-        <p>Lorem ipsum dolor iset</p>
+        <p>
+          IN CLASS:<br>
+          TBD
+          <br><br>
+          - break -
+          <br><br>
+          TBD
+          <br><br>
+          FOR NEXT CLASS:<br>
+          TBD
+        </p>
       </div>
 
       <button class="accordion"><li>Class 12, Apr 20</li></button>
       <div class="panel">
-        <p>Lorem ipsum dolor iset</p>
+        <p>
+          IN CLASS:<br>
+          TBD
+          <br><br>
+          - break -
+          <br><br>
+          TBD
+          <br><br>
+          FOR NEXT CLASS:<br>
+          TBD
+        </p>
       </div>
 
       <button class="accordion"><li>Class 13, Apr 27</li></button>
       <div class="panel">
-        <p>Lorem ipsum dolor iset</p>
+        <p>
+          IN CLASS:<br>
+          TBD
+          <br><br>
+          - break -
+          <br><br>
+          TBD
+          <br><br>
+          FOR NEXT CLASS:<br>
+          TBD
+        </p>
       </div>
 
       <button class="accordion"><li>Class 14, May 4</li></button>
       <div class="panel">
-        <p>Lorem ipsum dolor iset</p>
+        <p>
+          IN CLASS:<br>
+          TBD
+          <br><br>
+          - break -
+          <br><br>
+          TBD
+          <br><br>
+          FOR NEXT CLASS:<br>
+          TBD
+        </p>
       </div>
 
       <button class="accordion"><li>Class 15 (Final), May 10</li></button>
       <div class="panel">
         <p>
           IN CLASS:<br>
-          Query Critique<br>
           Exercise: Update<br>
+          Query Critique<br>
         </p>
       </div>
 
