--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           <a href="https://docs.google.com/document/d/19cNLsHj5rdBegJmbX_wqoIAU5dOcasnfZKzEWjmCsnw/edit?usp=sharing" target="blank">Web Share Sign Up</a><br>
           <a href="https://docs.google.com/document/d/1kfGGR3mocZeJtDyF3cSjNQg5UVgV6RG3hWzf2U99NIk/edit?usp=sharing" target="blank">Group Agreement</a><br>
           <a href="https://www.are.na/pmcd-5002-section-b-spring-2022" target="blank">Are.na</a><br>
-          <a href="google.com" target="blank">Zoom</a><br>
+          <a href="" target="blank">Zoom</a><br>
         </p>
       </div>
 
@@ -55,18 +55,18 @@
           <img src="assets/favicon.ico" style="max-height: .75em; max-width: .75em;">
           <a>Console Randomizer</a>
           <br><br>
-          <a href="www.google.com" target="blank">Firstname Lastname</a> (pronouns)<br>
-          <a href="www.google.com" target="blank">Firstname Lastname</a> (pronouns)<br>
-          <a href="www.google.com" target="blank">Firstname Lastname</a> (pronouns)<br>
-          <a href="www.google.com" target="blank">Firstname Lastname</a> (pronouns)<br>
-          <a href="www.google.com" target="blank">Firstname Lastname</a> (pronouns)<br>
-          <a href="www.google.com" target="blank">Firstname Lastname</a> (pronouns)<br>
-          <a href="www.google.com" target="blank">Firstname Lastname</a> (pronouns)<br>
-          <a href="www.google.com" target="blank">Firstname Lastname</a> (pronouns)<br>
-          <a href="www.google.com" target="blank">Firstname Lastname</a> (pronouns)<br>
-          <a href="www.google.com" target="blank">Firstname Lastname</a> (pronouns)<br>
-          <a href="www.google.com" target="blank">Firstname Lastname</a> (pronouns)<br>
-          <a href="www.google.com" target="blank">Firstname Lastname</a> (pronouns)
+          <a href="" target="blank">Firstname Lastname</a> (pronouns)<br>
+          <a href="" target="blank">Firstname Lastname</a> (pronouns)<br>
+          <a href="" target="blank">Firstname Lastname</a> (pronouns)<br>
+          <a href="" target="blank">Firstname Lastname</a> (pronouns)<br>
+          <a href="" target="blank">Firstname Lastname</a> (pronouns)<br>
+          <a href="" target="blank">Firstname Lastname</a> (pronouns)<br>
+          <a href="" target="blank">Firstname Lastname</a> (pronouns)<br>
+          <a href="" target="blank">Firstname Lastname</a> (pronouns)<br>
+          <a href="" target="blank">Firstname Lastname</a> (pronouns)<br>
+          <a href="" target="blank">Firstname Lastname</a> (pronouns)<br>
+          <a href="" target="blank">Firstname Lastname</a> (pronouns)<br>
+          <a href="" target="blank">Firstname Lastname</a> (pronouns)
           <br><br>
           <a href="https://tuanpham.info" target="blank">Tuan Quoc Pham</a> (he/him), Instructor<br>
           phamt@newschool.edu
@@ -256,13 +256,10 @@
           Introduce Project 3: Query<br>
           Content Critique
           <br><br>
-          - break -
-          <br><br>
-          Exercise: TBD
-          <br><br>
           FOR NEXT CLASS:<br>
           Read <a href="https://frankchimero.com/blog/2015/the-webs-grain/" target="blank">The Web's Grain</a>, Frank Chimero<br>
           <a href="https://docs.google.com/document/d/1adxnPSIr56yG0y0pchh-Cay99rUApITgazFabLclYH4/edit?usp=sharing" target="blank">Reading Reflections</a><br>
+          Exercise: Interview Review
         </p>
       </div>
 
@@ -364,7 +361,7 @@
             <br><br>
             REQUIREMENTS:<br>
             ① Walk Presentation<br>
-            - Add your presentation to <a href="" target="blank">this Google Slide</a>.<br>
+            - Add your presentation to this <a href="" target="blank">document</a>.<br>
             - Have at least 10 slides sharing the things you noticed on your walk.<br>
             - At least 3 possible platforms you could include and why.
             <br><br>
@@ -375,7 +372,7 @@
             - Have a clear end.
             <br><br>
             FINAL CRITIQUE:<br>
-            For the final critique of this project, you will post your link on <a href="" target="blank">this Google doc</a>. The person preceding your name on the list will navigate your Path before we critique it as a class.
+            For the final critique of this project, you will post your link on this <a href="" target="blank">document</a>. The person preceding your name on the list will navigate your Path before we critique it as a class.
             <br><br>
             CONSIDERATIONS:<br>
             - Take your walk alone so that you can focus.<br>
@@ -431,7 +428,7 @@
             - Flexible with consideration that it can grow in the future.
             <br><br>
             FINAL CRITIQUE:<br>
-            For the final critique of this project, you will post your link on <a href="" target="blank">this Google doc</a>. The original creator of your site's collection will navigate the site before we critique it as a class.
+            For the final critique of this project, you will post your link on this <a href="" target="blank">document</a>. The original creator of your site's collection will navigate the site before we critique it as a class.
             <br><br>
             CONSIDERATIONS:<br>
             - Does a narrative begin to form?<br>
@@ -451,8 +448,6 @@
         <button class="accordion"><li>Query</li></button>
         <div class="panel">
           <p>
-            There is an estimated XX people online at any time across a growing number of devices and interfaces.
-            <br><br>
             This final project circles back around to the first. You will retrace your walk from Project 1: Path but this time with another person. On this walk, begin a conversation around your thoughts on X but try to let the topic flow naturally. Make sure this conversation is recorded for your ease of transcription and reference later.
             <br><br>
             Create a website that hosts the transcription of your conversation akin to an interview. The formatting and style of your website must significantly shift between two states (Desktop/Mobile, Digital/Print, Portrait/Landscape, etc.) using Media Query. Unlike Project 1, the goal of Project 3: Query is not to translate your walk but rather the conversation you shared.
@@ -471,7 +466,7 @@
             - Be intentional about what kind of reading experience you're presenting.
             <br><br>
             FINAL CRITIQUE:<br>
-            For the final critique of this project, you will post your link on <a href="" target="blank">this Google doc</a>. The two people after your name on the list will navigate the two states of your website. If you chose print as one of your states, come prepared with it fully printed.
+            For the final critique of this project, you will post your link on this <a href="" target="blank">document</a>. The two people after your name on the list will navigate the two states of your website. If you chose print as one of your states, come prepared with it fully printed.
             <br><br>
             CONSIDERATIONS:<br>
             - Do your two states compliment or contrast with each other?<br>
@@ -581,6 +576,17 @@
         <button class="accordion"><li>Bug</li></button>
         <div class="panel">
           <p>Lorem ipsum dolor iset</p>
+        </div>
+
+        <button class="accordion"><li>Interview Review</li></button>
+        <div class="panel">
+          <p>
+            To help you prepare for Project 3: Query, you will review and analyze an existing interview.
+            <br><br>
+            1. Choose an interview and document it with screenshots or scans.<br>
+            2. Upload your images to this <a href="" target="blank">document</a>
+            3. Fill out the remaining slides which detail the content and design of your interview.
+          </p>
         </div>
 
         <button class="accordion"><li>Update</li></button>
@@ -805,13 +811,6 @@
           In the Communication Design program, we are committed to creating a more inclusive, equitable and anti-racist community. We recognize that we must continue to advance our teaching pedagogy and expand our curriculum to address issues of white supremacy, racial discrimination and other forms of systemic oppression.
           <br><br>
           We come to the classroom from a variety of backgrounds and cultures. It is important to be respectful and empathetic towards others, be open to criticism and engage in new ways of learning. On the first day of class, we will write a Group Agreement that outlines our collective classroom standards for the course. We will be responsible for upholding the agreement throughout the semester.
-        </p>
-      </div>
-
-      <button class="accordion"><li>Land Acknowledgment</li></button>
-      <div class="panel">
-        <p>
-          Lorem ipsum dolor iset.
         </p>
       </div>
 
