--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
           FOR NEXT CLASS:<br>
           Web Share<br>
           <a href="" target="blank">Prepare Walk Presentations</a><br>
-          <a href="" target="blank">HTML Homework</a> (optional)
+          <a href="" download>HTML Homework</a> (optional)
         </p>
       </div>
 
@@ -140,7 +140,7 @@
           Read <a href="" target="blank">On Exactitude in Science</a>, Dan Michaelson<br>
           <a href="https://docs.google.com/document/d/1adxnPSIr56yG0y0pchh-Cay99rUApITgazFabLclYH4/edit?usp=sharing" target="blank">Reading Reflections</a><br>
           <a href="https://docs.google.com/document/d/1n92t3SKq-7l-Pq_34xYSbqB7fsXFpXmTqFnQ6Asoq2M/edit?usp=sharing" target="blank">Sign up</a>  for WIP Critiques<br>
-          <a href="" target="blank">CSS Homework</a> (optional)
+          <a href="" download>CSS Homework</a> (optional)
         </p>
       </div>
 
@@ -158,7 +158,7 @@
           FOR NEXT CLASS:<br>
           <a href="https://www.are.na/pmcd-5002-section-b-spring-2022/web-share" target="blank">Web Share</a><br>
           <a href="https://docs.google.com/document/d/1n92t3SKq-7l-Pq_34xYSbqB7fsXFpXmTqFnQ6Asoq2M/edit?usp=sharing" target="blank">Sign up</a>  for WIP Critiques<br>
-          <a href="" target="blank">CSS Positioning Homework</a> (optional)
+          <a href="" download>CSS Positioning Homework</a> (optional)
         </p>
       </div>
 
@@ -175,7 +175,7 @@
           <br><br>
           FOR NEXT CLASS:<br>
           <a href="" target="blank">Path Critique</a>
-          <a href="" target="blank">Flexbox Homework</a> (optional)
+          <a href="" download>Flexbox Homework</a> (optional)
         </p>
       </div>
 
@@ -223,14 +223,14 @@
       <div class="panel">
         <p>
           IN CLASS:<br>
-          Intro to JS
+          <a href="" target="blank">Introduction to JS</a>
           <br><br>
           - break -
           <br><br>
           <a href="https://docs.google.com/document/d/1n92t3SKq-7l-Pq_34xYSbqB7fsXFpXmTqFnQ6Asoq2M/edit?usp=sharing" target="blank">WIP Critiques</a>
           <br><br>
           FOR NEXT CLASS:<br>
-          TBD
+          T
         </p>
       </div>
 
@@ -267,14 +267,15 @@
       <div class="panel">
         <p>
           IN CLASS:<br>
-          TBD
+          <a href="https://docs.google.com/document/d/1adxnPSIr56yG0y0pchh-Cay99rUApITgazFabLclYH4/edit?usp=sharing" target="blank">Reading Discussion</a><br>
+          <a href="" target="blank">Media Query</a>
           <br><br>
           - break -
           <br><br>
           TBD
           <br><br>
           FOR NEXT CLASS:<br>
-          TBD
+          <a href="" download>Media Query Homework</a> (optional)
         </p>
       </div>
 
@@ -570,7 +571,9 @@
 
         <button class="accordion"><li>Loading</li></button>
         <div class="panel">
-          <p>Lorem ipsum dolor iset</p>
+          <p>
+            Using what we learned about CSS animation, build a loading animation.
+          </p>
         </div>
 
         <button class="accordion"><li>Bug</li></button>
@@ -584,14 +587,19 @@
             To help you prepare for Project 3: Query, you will review and analyze an existing interview.
             <br><br>
             1. Choose an interview and document it with screenshots or scans.<br>
-            2. Upload your images to this <a href="" target="blank">document</a>
+            2. Upload your images to this <a href="" target="blank">document</a>.<br>
             3. Fill out the remaining slides which detail the content and design of your interview.
           </p>
         </div>
 
         <button class="accordion"><li>Update</li></button>
         <div class="panel">
-          <p>Lorem ipsum dolor iset</p>
+          <p>
+            As a class, we'll set up a document to send to ourselves one year from now.
+            <br><br>
+            1. Visit this <a href="" target="blank">document</a>.<br>
+            2. Fill out one of the template slides.
+          </p>
         </div>
 
         </ol>
@@ -610,6 +618,7 @@
           - <a href="" download>CSS Positioning Homework</a><br>
           - <a href="" download>Flexbox Homework</a><br>
           - <a href="" download>JS Homework</a><br>
+          - <a href="" download>Media Query Homework</a><br>
         </p>
       </div>
 
