--- a/index.html
+++ b/index.html
@@ -133,11 +133,11 @@
           <br><br>
           - break -
           <br><br>
-          <a href="" target="blank">Introduction to CSS</a><br>
+          <a href="" target="blank">CSS 1: Style, Class, ID</a><br>
           Exercise: Inspector
           <br><br>
           FOR NEXT CLASS:<br>
-          Read <a href="" target="blank">On Exactitude in Science</a>, Dan Michaelson<br>
+          Read <a href="assets/readings/michaelson.pdf" target="blank">On Exactitude in Science</a>, Dan Michaelson<br>
           <a href="https://docs.google.com/document/d/1adxnPSIr56yG0y0pchh-Cay99rUApITgazFabLclYH4/edit?usp=sharing" target="blank">Reading Reflections</a><br>
           <a href="https://docs.google.com/document/d/1n92t3SKq-7l-Pq_34xYSbqB7fsXFpXmTqFnQ6Asoq2M/edit?usp=sharing" target="blank">Sign up</a>  for WIP Critiques<br>
           <a href="" download>CSS Homework</a> (optional)
@@ -149,7 +149,7 @@
         <p>
           IN CLASS:<br>
           <a href="https://docs.google.com/document/d/1adxnPSIr56yG0y0pchh-Cay99rUApITgazFabLclYH4/edit?usp=sharing" target="blank">Reading Discussion</a><br>
-          <a href="" target="blank">CSS Positioning</a>
+          <a href="" target="blank">CSS 2: Positioning</a>
           <br><br>
           - break -
           <br><br>
@@ -167,7 +167,7 @@
         <p>
           IN CLASS:<br>
           <a href="https://www.are.na/pmcd-5002-section-b-spring-2022/web-share" target="blank">Web Share</a><br>
-          <a href="" target="blank">CSS Flexbox</a>
+          <a href="" target="blank">CSS 3: Flexbox and Media Query</a>
           <br><br>
           - break -
           <br><br>
@@ -187,7 +187,7 @@
           <a href="" target="blank">Path Critique</a>
           <br><br>
           FOR NEXT CLASS:<br>
-          Read <a href="" target="blank">TBD</a>, Author<br>
+          Read <a href="assets/readings/leguin.pdf" target="blank">The Carrier Bag Theory of Fiction</a>, Ursula K. Le Guin<br>
           <a href="https://docs.google.com/document/d/1adxnPSIr56yG0y0pchh-Cay99rUApITgazFabLclYH4/edit?usp=sharing" target="blank">Reading Reflections</a><br>
           <a href="" target="blank">Collection Presentation</a>
         </p>
@@ -198,14 +198,11 @@
         <p>
           IN CLASS:<br>
           <a href="https://docs.google.com/document/d/1adxnPSIr56yG0y0pchh-Cay99rUApITgazFabLclYH4/edit?usp=sharing" target="blank">Reading Discussion</a><br>
-          Collection Presentations
-          <br><br>
-          - break -
-          <br><br>
-          Set Up Are.na CMS
+          Guest: <a href="https://herdimasanggara.com/" target="blank">Herdimas Anggara</a>
           <br><br>
           FOR NEXT CLASS:<br>
           <a href="" target="blank">Midterm Survey</a><br>
+          Collection: Gather 40 Items<br>
           <a href="https://www.are.na/pmcd-5002-section-b-spring-2022/web-share" target="blank">Web Share</a><br>
         </p>
       </div>
@@ -223,14 +220,15 @@
       <div class="panel">
         <p>
           IN CLASS:<br>
-          <a href="" target="blank">Introduction to JS</a>
+          <a href="https://www.are.na/pmcd-5002-section-b-spring-2022/web-share" target="blank">Web Share</a><br>
+          Collection Presentations
           <br><br>
           - break -
           <br><br>
-          <a href="https://docs.google.com/document/d/1n92t3SKq-7l-Pq_34xYSbqB7fsXFpXmTqFnQ6Asoq2M/edit?usp=sharing" target="blank">WIP Critiques</a>
+          Set Up Are.na CMS
           <br><br>
           FOR NEXT CLASS:<br>
-          T
+          TBD
         </p>
       </div>
 
@@ -238,7 +236,7 @@
       <div class="panel">
           <p>
             IN CLASS:<br>
-            Exercise: Coding From Life
+            <a href="" target="blank">JS 1: Events, Functions</a>
             <br><br>
             - break -
             <br><br>
@@ -257,7 +255,7 @@
           Content Critique
           <br><br>
           FOR NEXT CLASS:<br>
-          Read <a href="https://frankchimero.com/blog/2015/the-webs-grain/" target="blank">The Web's Grain</a>, Frank Chimero<br>
+          Read <a href="https://medium.com/s/user-friendly/why-im-done-saying-user-user-experience-and-ux-in-2019-4fdfc6b7de23" target="blank">As a Designer, I Refuse to Call People ‘Users’</a>, Adam Lefton<br>
           <a href="https://docs.google.com/document/d/1adxnPSIr56yG0y0pchh-Cay99rUApITgazFabLclYH4/edit?usp=sharing" target="blank">Reading Reflections</a><br>
           Exercise: Interview Review
         </p>
@@ -268,14 +266,11 @@
         <p>
           IN CLASS:<br>
           <a href="https://docs.google.com/document/d/1adxnPSIr56yG0y0pchh-Cay99rUApITgazFabLclYH4/edit?usp=sharing" target="blank">Reading Discussion</a><br>
-          <a href="" target="blank">Media Query</a>
-          <br><br>
-          - break -
-          <br><br>
-          TBD
+          Guests: <a href="https://eric.young.li/" target="blank">Eric Li</a> and <a href="https://nazli-ercan.com/" target="blank">Nazlı Ercan</a>
           <br><br>
           FOR NEXT CLASS:<br>
-          <a href="" download>Media Query Homework</a> (optional)
+          10 Questions<br>
+          <a href="https://www.are.na/pmcd-5002-section-b-spring-2022/web-share" target="blank">Web Share</a><br>
         </p>
       </div>
 
@@ -283,14 +278,17 @@
       <div class="panel">
         <p>
           IN CLASS:<br>
-          TBD
+          <a href="https://www.are.na/pmcd-5002-section-b-spring-2022/web-share" target="blank">Web Share</a><br>
+          10 Questions<br>
           <br><br>
           - break -
           <br><br>
           TBD
           <br><br>
           FOR NEXT CLASS:<br>
-          TBD
+          Walk and Transcription<br>
+          Read <a href="https://frankchimero.com/blog/2015/the-webs-grain/" target="blank">The Web's Grain</a>, Frank Chimero<br>
+          <a href="https://docs.google.com/document/d/1adxnPSIr56yG0y0pchh-Cay99rUApITgazFabLclYH4/edit?usp=sharing" target="blank">Reading Reflections</a><br>
         </p>
       </div>
 
@@ -298,14 +296,14 @@
       <div class="panel">
         <p>
           IN CLASS:<br>
-          TBD
+          <a href="https://docs.google.com/document/d/1adxnPSIr56yG0y0pchh-Cay99rUApITgazFabLclYH4/edit?usp=sharing" target="blank">Reading Discussion</a><br>
           <br><br>
           - break -
           <br><br>
           TBD
           <br><br>
           FOR NEXT CLASS:<br>
-          TBD
+          <a href="https://docs.google.com/document/d/1n92t3SKq-7l-Pq_34xYSbqB7fsXFpXmTqFnQ6Asoq2M/edit?usp=sharing" target="blank">Sign up</a>  for WIP Critiques<br>
         </p>
       </div>
 
@@ -317,10 +315,10 @@
           <br><br>
           - break -
           <br><br>
-          TBD
+          <a href="https://docs.google.com/document/d/1n92t3SKq-7l-Pq_34xYSbqB7fsXFpXmTqFnQ6Asoq2M/edit?usp=sharing" target="blank">WIP Critiques</a>
           <br><br>
           FOR NEXT CLASS:<br>
-          TBD
+          Query Critique
         </p>
       </div>
 
@@ -449,32 +447,39 @@
         <button class="accordion"><li>Query</li></button>
         <div class="panel">
           <p>
-            This final project circles back around to the first. You will retrace your walk from Project 1: Path but this time with another person. On this walk, begin a conversation around your thoughts on X but try to let the topic flow naturally. Make sure this conversation is recorded for your ease of transcription and reference later.
+            Explore how the web connects us to each other and how we interact with those connections. This final project circles back around to the first. You will retrace your walk from Project 1: Path but this time joined with another person outside of this class. Prepare a set of 10 questions that will help guide the conversation although you do not have to strictly ahdere to it. Make sure this conversation is recorded for your ease of transcription and reference later.
             <br><br>
-            Create a website that hosts the transcription of your conversation akin to an interview. The formatting and style of your website must significantly shift between two states (Desktop/Mobile, Digital/Print, Portrait/Landscape, etc.) using Media Query. Unlike Project 1, the goal of Project 3: Query is not to translate your walk but rather the conversation you shared.
+            Create a website that hosts the transcription of your conversation akin to an interview. The formatting and style of your website must significantly shift between two states using Media Query. (Desktop/Mobile, Digital/Print, Portrait/Landscape, etc.) Unlike Project 1, the goal of Project 3: Query is not to translate your walk but rather the conversation you shared.
             See references on the <a href="" target="blank">Query Are.na channel</a>.
             <br><br>
             REQUIREMENTS:<br>
             ① Conversation<br>
+            - Your guest must be someone outside of this class.<br>
+            - Must prepare a list of 10 questions.<br>
             - Must prepare a recording of your conversation.<br>
             - Must prepare a transcription of your conversation.<br>
-            - Keep the conversation under an hour.
+            - Keep the conversation under half an hour.
             <br><br>
             ② Website<br>
             - Must contain the transcription of your conversation.<br>
             - Shift between two states using Media Query.<br>
-            - Both states must take into consideration the nuances of your conversation.<br>
+            - Both states must be significantly different, taking into consideration the nuances of your conversation.<br>
             - Be intentional about what kind of reading experience you're presenting.
             <br><br>
             FINAL CRITIQUE:<br>
             For the final critique of this project, you will post your link on this <a href="" target="blank">document</a>. The two people after your name on the list will navigate the two states of your website. If you chose print as one of your states, come prepared with it fully printed.
             <br><br>
             CONSIDERATIONS:<br>
+            Conversation/Walk<br>
+            - Consider having one or two questions that help introduce an audience to who your guest is.<br>
+            - Could your conversation include topics we've covered in class?<br>
+            - Although this project is not focused on your Path, consider what is different about your walk this second time. What has changed in the environment? Is it a different time of day or weather? How have you changed?<br>
+            - Is there any additional ephemera that could be collected on your walk together such as photos, video, sounds, etc.<br><br>
+            Website<br>
             - Do your two states compliment or contrast with each other?<br>
             - Is there a difference in the content between your two states?<br>
-            - Is there any additional ephemera that could be collected on your walk together such as photos, video, sounds, etc.<br>
             - How can the nuances of your conversation be translated into interactivity, layout, etc. <br>
-            - Be cognizant of the readability of your text in terms of size, leading, tracking, contrast, etc.<br>
+            - Consider how your site is representing two distinct voices. Be cognizant of the readability of your text in terms of size, leading, tracking, contrast, etc.<br>
             - Consider what you may leave in or out of your transcription.
             <br><br>
             TRANSCRIPTION:<br>
@@ -482,7 +487,7 @@
             <br><br>
             SCHEDULE:<br>
             - Class 10, Apr 6: Introduce Project<br>
-            - Class 11, Apr 13: WIP Critiques<br>
+            - Class 11, Apr 13: 10 Questions<br>
             - Class 12, Apr 20: WIP Critiques<br>
             - Class 13, Apr 27: WIP Critiques<br>
             - Class 14, May 4: WIP Critiques<br>
@@ -823,6 +828,13 @@
         </p>
       </div>
 
+      <!-- <button class="accordion"><li>Land Acknowledgement</li></button>
+      <div class="panel">
+        <p>
+          This class respectfully acknowledges
+        </p>
+      </div> -->
+
       <button class="accordion"><li>Instructor Information</li></button>
       <div class="panel">
         <p>
@@ -839,9 +851,9 @@
 
   <footer>
     The web is forever growing and changing, including this website.
-    Thank you to Herdimas Anggara, Simone Cutri, Luiza Dale, Brandon Griffin, Rosa McElheny, Dan Michaelson, Aidan Quinlan, Steven Rodriguez, and many others who helped shape this class and continue to weave a generous web for all.
+    Thank you to Simone Cutrí, Luiza Dale, Brendan Griffiths, Rosa McElheny, Aidan Quinlan, Steven Rodriguez, Mindy Seu, and many others who helped shape this class and continue to weave a generous web for all. Special thank you to our guests Herdimas Anggara, Nazlı Ercan, and Eric Li.
     <br><br>
-    Last Updated: Tue Nov 16, 2021
+    Last Updated: Sun Dec 5, 2021
   </footer>
 
 
